# Zeroth-Learn

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
lab/mnist/: __main__.py  configs.py  data.py  experiments.py  main.py  models.py
zeroth/: __init__.py  experiment.py  losses.py  model.py  plot_losses.py
zeroth/abstract/: __init__.py  blackbox.py  loss.py  model.py  optimizer.py
zeroth/core/: __init__.py  activation_functions.py  dataclasses_utils.py  experiment.py  losses.py  model.py  plot_losses.py  utils.py
zeroth/core/abstract/: __init__.py  neural_network.py
zeroth/core/backpropagation/: __init__.py  layer.py  neural_network_backpropagation.py  optimizers.py
zeroth/core/common/: __init__.py  losses.py  neural_network.py  optimizer.py
zeroth/core/data/: __init__.py  data.py
zeroth/core/first_order/: __init__.py  layer.py  neural_network.py  optimizers.py
zeroth/core/spsa/: __init__.py  neural_network_perturbation.py  optimizers.py  params.py  perturbations.py
zeroth/core/utils/: perturbation_matrices.py
zeroth/data/: __init__.py  data.py
zeroth/first_order/: __init__.py  layer.py  model.py  neural_network.py  optimizers.py
zeroth/lab/: config.py  data.py  experiments.py  main.py  models.py
zeroth/lab/mnist/: config.py  (+4 more)
zeroth/losses/: __init__.py  cross_entropy.py  mse.py
zeroth/utils/: activation_functions.py  dataclasses_utils.py  metrics.py  perturbation_matrices.py
zeroth/zeroth_order/: __init__.py  gradient_estimators.py  model.py  optimizers.py  zeroth_order_blackbox.py
(+7 files in other folders)
