[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroth-learn"
version = "0.1.4"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "cycler"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zeroth*"]
exclude = ["lab*"]